image picker added

--- a/AniLog/Info.plist
+++ b/AniLog/Info.plist
@@ -60,5 +60,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow access to images from your library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow access to camera</string>
 </dict>
 </plist>
